# schwabot

./: DEPENDENCIES_UPDATE_SUMMARY.md  FINAL_SYSTEM_STATUS.md  INSTALLATION_SOLUTION.md  MATH_DOCUMENTATION.md  README.md  SYSTEM_ARCHITECTURE.md  __init__.py  dual_unicore_handler.py  install_dependencies.py  instruction_listener.py  main.py  price_feed_integration.py  pyproject.toml  requirements-prod.txt  requirements.txt  requirements_clean.txt  requirements_fixed.txt  requirements_math_analysis.py  requirements_validator.py  talib_fallback.py  test_requirements_installation.py  test_trade_entry_exit.py  ufs_app.py
ai_oracles/: fitness_oracle.py  profit_oracle.py  reigime_oracle.py
config/: oracle_config.yaml  schwafit_meta.yaml
core/: __init__.py  access_controller.py  access_validator.py  action_selector.py  adapter_manager.py  adaptive_profit_cycle_function.py  adaptive_trainer.py  aleph_unitizer.py  alert_dispatcher.py  alert_manager.py  algebraic_solver.py  algorithm_optimizer.py  analysis_engine.py  api_documenter.py  api_integrator.py  archive_creator.py  archive_extractor.py  archive_manager.py  archive_validator.py  audit_logger.py  audit_manager.py  audit_reporter.py  audit_trail.py  auth_manager.py  authorization_manager.py  backup_creator.py  backup_manager.py  backup_restorer.py  backup_validator.py  bootstrap.py  btc_tick_matrix_initializer.py  cache_invalidator.py  cache_manager.py  cache_optimizer.py  cache_store.py  choice_optimizer.py  chunk_mapper.py  chunk_router.py  cleanup_handler.py  cli_matrix_visualizer.py  (+198 more)
gui/: __init__.py  controls.py  monitors.py  package.json  ring_analysis.py  tailwind.config.js  visualizer.py
mathcore/: entropy_analysis.py  ghost_filter.py  hash_memory.py  hashing.py  profit_vector.py  recursive_engine.py  tick_cycle.py  vault_math.py
mathlib/: line_render_engine.py  matrix_fault_resolver.py
meta/: resonance_loop_controller.py
recursive_engine/: echo_hash_engine.py  recursive_registry.py  recursive_strategy_handler.py  test_recursive_engine_integration.py
scaling/: __init__.py  hash_dispatcher.py  monitor_portals.py  throttle_manager.py
schwafit/: latent_fingerprint.py
scripts/: poll_sensors.sh  run_hash_cycles.py
startup/: init_ports.py
tests/: test_aleph_unitizer.py  (+3 more)
(+33 files in other folders)
