[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schwabot"
version = "0.1.0"
description = "A highly modular, mathematically rigorous, and fault-tolerant core for trading/automation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "psutil>=5.8.0",
    "cupy-cuda11x>=11.0.0; platform_system != \"Windows\"",
    "pynvml>=11.0.0",
    "typing-extensions>=4.0.0",
    "pathlib>=1.0.1",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.13.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "ta-lib>=0.4.0; platform_system != \"Windows\"",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "ccxt>=2.0.0",
    "joblib>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "autopep8>=2.0.0",
    "flake8-import-order>=0.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=schwabot"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 